# python-holidays

./: .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  README.rst  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  gh-pages.yml  pre-commit-autoupdate.yml  update-snapshots.yml
docs/css/: custom.css
docs/source/: conf.py
holidays/: holiday_base.py
holidays/calendars/: hindu.py
holidays/countries/: india.py  uruguay.py
requirements/: dev.txt  docs.txt  tests.txt
scripts/calendar/: asian_generator.py  generator.py
snapshots/countries/: KE_COMMON.json  MY_01.json  MY_02.json  MY_03.json  MY_04.json  MY_05.json  MY_06.json  MY_07.json  MY_08.json  MY_09.json  MY_10.json  MY_11.json  MY_12.json  MY_14.json  MY_15.json  SG_COMMON.json  SR_COMMON.json  TT_COMMON.json
tests/: test_l10n.py
tests/countries/: test_gabon.py  test_india.py  test_malaysia.py  test_trinidad_and_tobago.py
