[project]
name = "holidays"
description = "Open World Holidays Framework"
license = "MIT"
license-files = ["CONTRIBUTORS", "LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

authors = [{ name = "Vacanza Team" }]
dependencies = ["python-dateutil"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: File Formats :: JSON",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["holidays", "calendar", "l10n", "worldwide", "vacation"]
maintainers = [
    { name = "Arkadii Yakovets" },
    { name = "Panpakorn Siripanich" },
    { name = "Serhii Murza" },
]

[project.urls]
Documentation = "https://holidays.readthedocs.io/en/latest/"
Repository = "https://github.com/vacanza/holidays/"
Changelog = "https://github.com/vacanza/holidays/releases/"

[tool.coverage.run]
branch = true
omit = ["scripts/*", "setup.py", "tests/*"]

[tool.isort]
known_first_party = ["holidays", "tests"]
line_length = 99
multi_line_output = 3
no_inline_sort = true
profile = "black"
skip = ["docs"]

[[tool.mypy.overrides]]
module = "holidays.countries.*"
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = "holidays.groups.*"
disable_error_code = ["attr-defined"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "N", "PLE", "S", "T", "TC", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/generate_release_notes.py" = ["T201"]
"tests/test_holiday_base.py" = ["S301"]

[tool.ruff.lint.flake8-errmsg]
max-string-length = 99

[tool.pytest.ini_options]
addopts = [
    "--cov-fail-under=100",
]
filterwarnings = [
    "ignore::DeprecationWarning:holidays.deprecations.v1_incompatibility",
]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "holidays.version.__version__" }

[tool.setuptools.packages.find]
include = ["holidays*"]

[dependency-groups]
dev = [
    "convertdate==2.4.0",
    "gitpython==3.1.44",
    "hijridate==2.5.0",
    "lingva==5.0.6",
    "pygithub==2.6.1",
    "requests==2.32.4",
    "urllib3>=2.2.2",
]
docs = [
    "markdown-include==0.8.1",
    "mkdocs==1.6.1",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocstrings-python==1.16.12",
    "zipp>=3.19.1 ; python_full_version < '3.10'",
]
tests = [
    "coverage==7.9.2",
    "importlib-metadata==8.7.0 ; python_full_version < '3.10'",
    "numpy<2.1.0 ; python_full_version < '3.10'",
    "numpy<2.3.0 ; python_full_version == '3.10.*'",
    "numpy>=2.3.0 ; python_full_version >= '3.11'",
    "polib==1.2.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-xdist==3.8.0",
    "zipp>=3.19.1 ; python_full_version < '3.10'",
]
